--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "overwait",
   "version": "1.0.0",
   "description": "A lightweight library to supercharge the await operator!",
-  "main": "overwait.js",
+  "main": "src/overwait.js",
   "type": "module",
   "scripts": {
-    "test": "tap test-overwait.js"
+    "test": "tap --include=test/*.js"
   },
   "author": "Jon-Carlos Rivera <jon.carlos.rivera@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
     "tap": "^18.4.0"
   },
-  "dependencies": {
-    "global": "^4.4.0"
-  }
+  "tap": {}
 }
