--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "overwait",
   "version": "1.0.0",
   "description": "A lightweight library to supercharge the await operator!",
+  "repository": {
+    "url": "git+https://github.com/jwplayer/overwait.git"
+  },
   "main": "src/overwait.js",
   "type": "module",
   "scripts": {
@@ -11,6 +14,5 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "tap": "^18.4.0"
-  },
-  "tap": {}
+  }
 }
